<resources>
    <string name="app_name">DataPersonalSebastiani</string>


    <string name="name">Daniel Sebastiani Sobenes</string>

    <string name="level">Student T.I.</string>

    <string name="personal_data">Personal Data</string>
    <string name="settings">Settings</string>
    <string name="e_statement">E-Statement</string>
    <string name="personal">E-Statement</string>
    <string name="refferal_code">Refferal Code</string>
    <string name="faqs">FAQs</string>
    <string name="our_handbook">Our Handbook</string>
    <string name="community">Community</string>
    <string name="feel">Feel Free to Ask, We Ready to Help</string>
    <string name="gender">Gender</string>

    <string name="exit">Exit</string>

    <string name="photo">New Pic</string>

    <string name="your_name">Your Name</string>

    <string name="date_birthay">Date of Birth</string>
    <string name="cumple">04 Junuary 1984</string>

    <string name="your_job">Your Job</string>
    <string name="support">System Developer</string>

    <string name="month_money">Monthly Income</string>

    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="error_password">Password must have a minimum of 4 characters</string>


    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="money">S/.1500 - S/.3500 / year</string>

    <string name="login">Login</string>
    <string name="register">Register</string>


    <string name="image">imagen</string>
    <string name="todo">TODO</string>

    //COMMUNITY
    <string name="comunity">Community</string>
    <string name="learn_stock">Learn Stock, Educate the world</string>
    <string name="search">Search something ...</string>

</resources>