<?xml version="1.0" encoding="UTF-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround"
    tools:context=".LoginFragment"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="235dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/image"
            android:src="@drawable/seguridad_01"
            tools:ignore="ImageContrastCheck" />



        <!-- USERNAME-->
        <!--
            app:helperText="Required"
            app:helperTextTextColor="@color/red"
            -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_input"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:counterTextColor="@color/counter_text"
            android:paddingTop="25dp"

            android:hint="@string/username"
            app:startIconDrawable="@drawable/user_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"

            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:maxLength="15"
                android:inputType="text"

                android:textColor="#2962FF"
                android:textColorHint="@color/name"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- PASSWORD -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="12"

            android:hint="@string/password"
            app:startIconDrawable="@drawable/password_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:maxLength="12"
                android:inputType="textPassword"
                app:endIconMode="password_toggle"

                android:textColor="#2962FF"
                android:textColorHint="@color/name"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <!-- EDITAR INFORMACIÓN-->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/TextAppearance.MaterialComponents.Button"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="100dp"
                android:backgroundTintMode="screen"
                android:text="@string/login"

                app:backgroundTint="#83C8AB"
                app:cornerRadius="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                style="@style/Widget.MaterialComponents.Button.TextButton"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="45dp"
                android:layout_marginRight="45dp"
                android:layout_toStartOf="@+id/btn_login"
                android:layout_toLeftOf="@id/btn_login"
                android:text="@string/register"

                app:backgroundTint="#32BFEE"
                app:cornerRadius="20dp" />
        </RelativeLayout>




    </LinearLayout>
</ScrollView>



